<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Add note</string>
    <string name="add">Add</string>
    <string name="note_detail">Note detail</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="note">Note</string>
</resources>